<resources>


    <string name="app_name">PEACIFY</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="give_me_a_quote">GIVE ME A QUOTE</string>
    <string name="hey_beautiful">HEY BEAUTIFUL</string>
    <string name="phone">Phone</string>
    <string name="share_app">Share App</string>
    <string name="check_others">Meditate</string>
    <string name="suggestions">Suggestions</string>
    <string name="add_contacts">Add contacts</string>
    <string name="quote_vibe">Quote Vibe</string>
    <string name="mood_check">Mood Check</string>
    <string name="start_a_new_day">Start a new day</string>
    <string name="app">MENU</string>
    <string name="how_do_you_feel_today">How Do you feel Today?</string>
    <string name="happy">Happy</string>
    <string name="normal">Normal</string>
    <string name="crying">Crying</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="bored">Bored</string>
    <string name="surprised">Surprised</string>
    <string name="excited">Excited</string>
    <string name="your_mood_records_till_now">Your mood records till now</string>
    <string name="add_description">add description</string>
    <string name="pain">pain</string>
    <string name="sick">sick</string>
    <string name="select_your_mood_from_emogis_and_describe_it_below">Select your mood from emojis and describe it below</string>
    <string name="save">save</string>
    <string name="describe_your_mood">Describe your mood!</string>
    <string name="talk_to_a_friend">Talk to a friend</string>
    <string name="contact_a_psychologist">Contact a psychologist</string>
    <string name="if_you_need_assistance_the_choose_among_the_following_options">If you need assistance then choose among the following options</string>
    <string name="logout">LOGOUT</string>
    <string name="peace">peace</string>
    <string name="connect">Connect</string>
    <string name="mood_records">Mood Records</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_meditate">meditate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="breathe_and_let_go">Breathe and let go !!</string>
    <string name="xyz">xyz</string>
    <string name="date_and_time">Date and Time :</string>
</resources>