<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_app_bg"
    tools:context=".dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#673AB7"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/titlename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bungee"
            android:text="@string/app"
            android:textColor="@color/darkpurple"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />



        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:src="@drawable/icon2"
            android:contentDescription="@string/start_a_new_day" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <androidx.cardview.widget.CardView
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp"

                app:cardElevation="4dp">

                <RelativeLayout
                    android:id="@+id/mood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ctr_bg">

                    <TextView
                        android:id="@+id/option1name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/option1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/mood_check"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/option1"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/emojis"
                        android:contentDescription="@string/mood_check" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:id="@+id/quote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ctr_bg">

                    <ImageView
                        android:id="@+id/option2"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/pulse"
                        android:contentDescription="@string/quote_vibe" />

                    <TextView
                        android:id="@+id/option2name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/option2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/quote_vibe"
                        android:textSize="20sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:id="@+id/contacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ctr_bg">

                    <TextView
                        android:id="@+id/option3name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/option3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/connect"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/option3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/plus3"
                        android:contentDescription="@string/add_contacts" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:id="@+id/suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ctr_bg">

                    <ImageView
                        android:id="@+id/option4"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/book2"
                        android:contentDescription="@string/mood_records" />

                    <TextView
                        android:id="@+id/option4name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/option4"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/mood_records"
                        android:textSize="20sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:id="@+id/checkPeople"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ctr_bg">

                    <TextView
                        android:id="@+id/option5name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/option5"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/check_others"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/option5"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/images1"
                        android:contentDescription="@string/check_others" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ctr_bg">

                    <ImageView
                        android:id="@+id/option6"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/telegram"
                        android:contentDescription="@string/share_app" />

                    <TextView
                        android:id="@+id/option6name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/option6"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/share_app"
                        android:textSize="20sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/helpbtn"
            android:layout_width="99dp"
            android:layout_height="42dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>